# timeless-as0

./: .gitignore  CONTRIBUTORS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SOUND_ENGINE_STATE_FIXES.md  SOUND_IMPROVEMENTS.md  SOUND_INTEGRATION.md  airship-ui-spec.md  amplitude_reduction_summary.md  analyze_performance.py  audio_hdr_summary.md  audio_track_reference.py  combustion_events_summary.md  core_simulator.py  data-model.md  debug_buffer_continuity.py  debug_use_button.py  demo_sound_improvements.py  heightmap.py  integration_test.json  main.py  map_dem_fetch.py  map_fetch.py  map_gray_fetch.py  pyproject.toml  run.sh  saved_game.json  scene_book.py  scene_bridge.py  scene_camera.py  scene_cargo.py  scene_communications.py  scene_crew.py  scene_edit.py  scene_engine_room.py  scene_fuel.py  scene_library.py  scene_main_menu.py  scene_missions.py  (+60 more)
.github/: copilot-instructions.md
assets/books/: airship-maths-compendium.md  cargo-system-requirements.md  city-locations.md  dreaming-of-steam-and-copper.md  fields-of-evermere.md  how-we-rendered-a-world.md  journal.md  riding-the-winds.md  scenic-locations.md  symphony-of-chaos.md  the-azure-compass.md  the-trade-winds-memoir.md  user-manual-bridge.md  user-manual-cargo-system.md  user-manual-engine-room.md  user-manual-fuel.md  user-manual-navigation.md  wind-in-the-wires.md
assets/png/: world-heightmap.meta.json
doc/: MAP_DEM_FETCH_README.md  MAP_FETCH_README.md  MAP_GRAY_FETCH_README.md
tests/: best_tailwind_altitude.py  dynamic_wind_table.py  test_core_simulator.py  test_latlon_wrap.py  test_ui_foundation.py
