[project]
name = "airshipzero"
version = "0.2.46"
description = "Realistic airship flight simulator with complex systems management"
authors = [{name = "Timeless Prototype"}]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
airshipzero = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "assets/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "/.git",
    "/.gitignore", 
    "/.vscode",
    "/tests",
    "**/__pycache__",
    "*.pyc",
    "htmlcov/",
    "test_*.json",
    "uv_test_*.json",
    "dist/",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--strict-markers",
    "-v"
]
markers = [
    "ui: marks tests as UI/integration tests (may require display)",
    "unit: marks tests as unit tests (no external dependencies)",
]
